# macos-frontend-dev-setup

./: README.en.md  README.md  init.sh
macdevkit-cli/: Cargo.toml  README.md  build.rs
macdevkit-cli/src/: script_handler.rs
